# Apiary

./: .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  Mechanisms To Explore.md  README.md  concepts.md  debug_bindings.ipynb  defi_risk_management_notes.md  design.md  kill_and_cleanup.sh  kill_processes.sh  local_logs  main.py  pyproject.toml  scratch.py  shell.nix  simulations.md  tests.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  wheels.yml
apiary/: __init__.py  __main__.py  agent.py  agent_registry.py  base_agent.py  buyer.py  cli.py  external_services.py  inference.py  inference_endpoint.py  seller.py  setup_anvil.py  shared.py  utils.py  validator.py
apiary/notebooks/: debug_bindings.ipynb
client/: README.md  client.ts  compute-marketplace-scheme.ts  package.json  runner.ts  scheme.ts
config/: buyer_exp_time.json  buyer_kalman.json  buyer_naive.json  buyer_poly_time.json  buyer_tit_for_tat.json  seller_exp_time.json  seller_kalman.json  seller_poly_time.json  seller_tit_for_tat.json
coophive/: __main__.py  agent.py  buyer.py  cli.py  client.py  client_unit_tests.py  constants.py  contract.py  data_attribute.py  deal.py  event.py  fastapi_app.py  globals.py  job_offer.py  local_logs  log_json.py  machine.py  main_old.py  match.py  messaging.py  policy.py  resource_offer.py  resource_provider.py  result.py  seller.py  service_provider.py  service_provider_local_information.py  smart_contract.py  smart_contract_unit_test.py  solver.py  solver_unit_tests.py  test_1.py  test_2.py  test_3.py  test_docker.py  testing_helper_functions.py  utils.py  validator.py
coophive/state/: globals.py  onchain.py
coophive_simulator/: __init__.py  client.py  client_unit_tests.py  contract.py  data_attribute.py  deal.py  deal_attributes_dict.py  event.py  hash_dict.py  job.py  job_offer.py  job_offer_attributes_dict.py  log_json.py  machine.py  machine_attributes_dict.py  main_old.py  match.py  match_attributes_dict.py  resource_offer.py  resource_offer_attributes_dict.py  resource_provider.py  result.py  results_attributes_dict.py  service_provider.py  service_provider_local_information.py  smart_contract.py  smart_contract_unit_test.py  solver.py  solver_unit_tests.py  test_1.py  test_2.py  test_3.py  testing_helper_functions.py  utils.py
docs/: README.md  classes_filter.py  design.md  market.md  relatedpackages.md
docs/gifs/: README.md
docs/img/: classes_apiary.dot  classes_coophive.dot  packages_apiary.dot  packages_coophive.dot
docs/research/: decisionmakingalgorithms.md  relatedpackages.md
jobs/: cowsay.Dockerfile  pdf_md.Dockerfile
jobs/docker/: cowsay.Dockerfile  sklearn.Dockerfile
jobs/input/: cowsay.txt
notes/: design.md  legacy_design.md  market.md  requirements.md
scrap/: client.py  server.py
script/: buy_desci.sh  buy_desci_bundle.sh  buy_erc20_bundle.sh  buy_ipnft.sh  buy_pdf_converter.sh  buy_vita.sh  gas_comparison.ipynb  get_desci_balances.sh  tmp.ipynb
scripts/: setup_anvil.py
simulator/: __init__.py  client.py  client_unit_tests.py  contract.py  data_attribute.py  deal.py  deal_attributes_dict.py  globals.py  hash_dict.py  job.py  job_offer.py  job_offer_attributes_dict.py  local_logs  log_json.py  machine.py  machine_attributes_dict.py  main.py  main_old.py  match.py  match_attributes_dict.py  resource_offer.py  resource_offer_attributes_dict.py  resource_provider.py  result.py  results_attributes_dict.py  service_provider.py  service_provider_local_information.py  smart_contract.py  smart_contract_unit_test.py  solver.py  solver_unit_tests.py  test_1.py  test_2.py  test_3.py  testing_helper_functions.py  utils.py
src/: bundle_for_job.rs  contracts.rs  erc20_for_job.rs  erc721_for_job.rs  erc_for_job.rs  lib.rs  provider.rs  shared.rs
src/apiary/: bundle_for_job.rs  erc20_for_job.rs  erc20_for_redis.rs  erc721_for_job.rs  erc_for_job.rs  mod.rs
src/contracts/: BundlePaymentObligation.json  DockerResultStatement.json  ERC20PaymentObligation.json  ERC20PaymentStatement.json  ERC721PaymentObligation.json  ERC721PaymentStatement.json  IEAS.json  IERC20.json.bak  IERC721.json  JobResultObligation.json  RedisProvisionObligation.json  TrivialArbiter.json  TrustedPartyArbiter.json  USDC.json
src/standalone/: erc20_for_job.rs  erc20_for_redis.rs  erc721_for_job.rs  mod.rs
tests/: test_agent.py  test_binding.py  test_buyer.py  test_client.py  test_hello_world.py  test_machine.py  test_policy.py  test_smart_contract.py  test_solver.py  tests.md
