[package]
name = "apiars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "apiars"
crate-type = ["cdylib"]

[dependencies]
alloy = { version = "0.3.6", features = ["full"] }
eyre = "0.6.12"
pyo3 = { version = "0.22.0", features = ["experimental-async"] }
tokio = { version = "1.40.0", features = ["full"] }
